--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
       <h2>My Works</h2>
       <div class="row">
         <div class="col-md-6 mb-4">
-          <img src="maintenance.jpeg" class="img-fluid rounded" alt="Work 1">
+          <img src="image(4).jpg" class="img-fluid rounded" alt="Work 1">
         </div>
         <div class="col-md-6 mb-4">
-          <img src="webdesign.jpeg" class="img-fluid rounded" alt="Work 2">
+          <img src="image(5).jpg" class="img-fluid rounded" alt="Work 2">
         </div>
       </div>
     </div>
